fix: img dark mode setting

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -6,9 +6,7 @@
 .theme-dark {
   --light: var(--OFF);
   --dark: var(--ON);
-}
 
-@media (prefers-color-scheme: dark) {
   img,
   video,
   iframe {
